# code2hyp-artifacts

./: .gitignore  .zenodo.json  CITATION.cff  README.md  code2hyp_branch_product_revision_report.md  code2hyp_relation_geometry_revision_plan_2026-06-22.md  pyproject.toml  requirements-dev.txt  requirements.txt
artifact_tools/: build_figures.py
code2hyp/: __init__.py
configs/: codenet_python800_stage_a_ast_path_protocol_v1.json  codenet_python800_stage_a_draft.json  codenet_python800_stage_a_model_analysis_protocol_v1.json  codenet_python800_stage_a_relevance_identity_addendum_v1.json  codenet_python800_stage_a_representation_identifiability_audit_v1.json  codenet_python800_stage_a_sampling_protocol_v1.json  codenet_python800_stage_a_test_execution_protocol_v1.json  codenet_python800_stage_a_test_inference_protocol_v1.json  codenet_python800_stage_a_test_resumability_addendum_v1.json  codenet_python800_stage_a_test_runtime_addendum_v1.json  codenet_python800_stage_a_transport_rounding_addendum_v1.json
data_manifests/: bugnet_python_train_pass_16x32_manifest.json  dta_zenodo_balanced64_manifest.json
geometry_profile_research/: __init__.py  aggregate.py  analysis.py  ast_features.py  batched_transport.py  code2hyp_cli.py  code2hyp_data.py  code2hyp_experiments.py  code2hyp_model.py  code2hyp_real_dataset.py  code2hyp_registry.py  code2hyp_reporting.py  code2hyp_smoke.py  code2hyp_supervised.py  code2hyp_synthetic.py  code2hyp_tool.py  code2hyp_torch.py  code2hyp_training.py  code_geometry_profile.py  codenet_ast_audit.py  codenet_eligibility.py  codenet_sampling.py  (+35 more)
(+677 files in other folders)
